--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -43,8 +43,8 @@
 
 <section class="book-grid">
   <div class="book-card" data-genre="fiction">
-    <a href="https://images.unsplash.com/photos/a-close-up-of-a-book-on-a-table-6nJp2Lu58EQ?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Fiction Book">
-      <img src="https://images.unsplash.com/photos/a-close-up-of-a-book-on-a-table-6nJp2Lu58EQ?auto=format&fit=crop&w=400&q=80" alt="Stacked book on table">
+    <a href="img/Fiction.jpg" data-lightbox="books" data-title="Fiction Book">
+      <img src="img/Fiction.jpg" alt="Stacked book on table">
     </a>
     <h3>Fiction</h3>
     <p>Imaginative stories that transport you to different worlds.</p>
