--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -51,8 +51,8 @@
   </div>
 
   <div class="book-card" data-genre="nonfiction">
-    <a href="https://images.unsplash.com/photos/EG9GnUX3Wkw?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Non Fiction Book">
-      <img src="https://images.unsplash.com/photos/EG9GnUX3Wkw?auto=format&fit=crop&w=400&q=80" alt="Non-fiction book cover">
+    <a href="img/nonfiction.jpg" data-lightbox="books" data-title="Non Fiction Book">
+      <img src="img/nonfiction.jpg" alt="Non-fiction book cover">
     </a>
     <h3>Non‑Fiction</h3>
     <p>Real stories, biographies and informative reads.</p>
