--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -59,8 +59,8 @@
   </div>
 
   <div class="book-card" data-genre="romance">
-    <a href="https://images.unsplash.com/photos/a-room-with-shelves-of-books-reYWnfXwrcQ?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Romance Book">
-      <img src="https://images.unsplash.com/photos/a-room-with-shelves-of-books-reYWnfXwrcQ?auto=format&fit=crop&w=400&q=80" alt="Books on a shelf in a cosy room">
+    <a href="img/Romance.jpg" data-lightbox="books" data-title="Romance Book">
+      <img src="img/Romance.jpg" alt="Books on a shelf in a cosy room">
     </a>
     <h3>Romance</h3>
     <p>Heartfelt and touching love stories.</p>
