--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -67,8 +67,8 @@
   </div>
 
   <div class="book-card" data-genre="mystery">
-    <a href="https://images.unsplash.com/photos/a-close-up-of-a-book-shelf-DPLoskgfpxU?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Mystery Book">
-      <img src="https://images.unsplash.com/photos/a-close-up-of-a-book-shelf-DPLoskgfpxU?auto=format&fit=crop&w=400&q=80" alt="Bookshelf close-up with mystery feel">
+    <a href="img/Mystery.jpg" data-lightbox="books" data-title="Mystery Book">
+      <img src="img/Mystery.jpg" alt="Bookshelf close-up with mystery feel">
     </a>
     <h3>Mystery</h3>
     <p>Whodunits, thrillers and suspenseful tales.</p>
