--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p class="author">Freshly brewed, single origin espresso</p>
     </div>
     <div class="book-card">
-      <img src="https://images.unsplash.com/photo-1601924582975-0545c1e75e86?w=900&q=80&auto=format&fit=crop" alt="Croissant">
+      <img src="img/croisant.jpg" alt="Croissant">
       <h3>Butter Croissant</h3>
       <p class="author">Baked fresh each morning</p>
     </div>
