--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -37,15 +37,14 @@
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1522184216313-5f392bd7d541?w=900&q=80&auto=format&fit=crop" alt="Latte">
+    <img src="img/latte.jpg" alt="Latte">
     <h3>Latte</h3>
     <p class="author">R32</p>
   </article>
 
   <article class="book-card">
     <img src="https://pixabay.com/illustrations/cookies-biscuits-sweets-food-8668140/" alt="Cookies and biscuits">
-    <!-- note: Pixabay page link used as image src. If the image does not load replace with the direct image URL or use Unsplash alternative -->
-    <h3>Assorted Cookies</h3>
+    
     <p class="author">R20</p>
   </article>
 
