--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -43,7 +43,7 @@
   </article>
 
   <article class="book-card">
-    <img src="https://pixabay.com/illustrations/cookies-biscuits-sweets-food-8668140/" alt="Cookies and biscuits">
+    <img src="img/cookies.jpg" alt="Cookies and biscuits">
     
     <p class="author">R20</p>
   </article>
