--- a/cafeandmenu.html
+++ b/cafeandmenu.html
@@ -55,7 +55,7 @@
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1565958011702-44b2f28c641b?w=900&q=80&auto=format&fit=crop" alt="Cheesecake">
+    <img src="img/cheescake.jpg" alt="Cheesecake">
     <h3>Classic Cheesecake</h3>
     <p class="author">R45</p>
   </article>
