--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@
 
 <section class="book-grid" style="max-width:1000px; margin:auto;">
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=900&q=80" alt="Author signing">
+    <img src="img/authorsigning.jpg" alt="Author signing">
     <h3>Author Signing: Jane Doe</h3>
     <p class="author">5 December 2025 — RSVP required</p>
     <p class="description">Meet local author Jane Doe and hear about her new novel.</p>
