--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1554774853-d10d3d28e1a0?auto=format&fit=crop&w=900&q=80" alt="Reading circle">
+    <img src="img/Readingcircle.jpg" alt="Reading circle">
     <h3>Monthly Reading Circle</h3>
     <p class="author">12 December 2025</p>
     <p class="description">Book discussion and refreshments. All welcome.</p>
