--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1515169067860-53858c5a7b48?auto=format&fit=crop&w=900&q=80" alt="Children's storytime">
+    <img src="img/childrenreading.jpg" alt="Children's storytime">
     <h3>Children's Storytime</h3>
     <p class="author">19 December 2025</p>
     <p class="description">Interactive storytelling for ages 3–8.</p>
